# real-world-simulation

./: .env.example  .gitignore  IMPLEMENTATION_REPORT.md  Makefile  PROGRESS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml  go.mod  white_paper.md
client/terminal/: main.go
client/web/: index.html
docker/: Dockerfile.character  Dockerfile.contracts  Dockerfile.feed  Dockerfile.gateway  Dockerfile.ledger  Dockerfile.world
migrations/: character_db.sql  contracts_db.sql  feed_db.sql  ledger_db.sql  seed_character.sql  seed_contracts.sql  seed_data.sql  seed_ledger.sql  seed_world.sql  world_db.sql
proto/common/: types.proto
proto/identity/: identity.proto
proto/ledger/: ledger.proto
scripts/: create_dbs_local.sql  migrate_local.sh  run_character.sh  run_contracts.sh  run_feed.sh  run_gateway.sh  run_ledger.sh  run_world.sh  seed_all.sh
services/ledger/: Cargo.toml
services/ledger/src/: ledger.rs  main.rs
